--- a/arch/arm/configs/u0_nonfc_defconfig
+++ b/arch/arm/configs/u0_nonfc_defconfig
@@ -599,6 +599,7 @@ CONFIG_VIRT_TO_BUS=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_NEED_PER_CPU_KM=y
 CONFIG_CLEANCACHE=y
+CONFIG_FRONTSWAP=y
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ARCH_POPULATES_NODE_MAP is not set
