[M4/U0]CONFIG_FORCE_FAST_CHARGE=y

--- a/arch/arm/configs/m4_nfc_defconfig
+++ b/arch/arm/configs/m4_nfc_defconfig
@@ -1800,6 +1800,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_GPIO is not set
 # CONFIG_CHARGER_MANAGER is not set
 CONFIG_BATTERY_MSM=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_LGE_FUEL_GAUGE=y
 CONFIG_LGE_BATTERY_TEMP=y
 CONFIG_LGE_BATTERY_SUSPEND_RESUME=y
