--- a/arch/arm/configs/u0_nfc_defconfig
+++ b/arch/arm/configs/u0_nfc_defconfig
@@ -1131,15 +1131,15 @@ CONFIG_RFKILL_PM=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 # NFC Feature
-# CONFIG_NFC is not set
+CONFIG_NFC=y
 CONFIG_NFC_DEVICES=y
 CONFIG_LGE_NFC=y
 CONFIG_LGE_NFC_PN544_C2=y
 CONFIG_LGE_NFC_PRESTANDBY=y
 CONFIG_LGE_NFC_MULTICORE_FASTBOOT=y
-#CONFIG_LGE_NFC_HW_QCT_MSM8255=y
+CONFIG_LGE_NFC_HW_QCT_MSM8255=y
 CONFIG_LGE_NFC_HW_QCT_MSM72X7A=y
-# CONFIG_LGE_NFC_SONY_CXD2235AGG is not set
+CONFIG_LGE_NFC_SONY_CXD2235AGG=y
 
 #
 # Device Drivers
